Added Spring RetryTemplate logic to handle exceptions